fix whitespace

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -19,7 +19,7 @@ body
   &Item
     padding 0.5em
     margin-bottom 1em
-    white-space pre-line
+    white-space pre
     overflow hidden
 
 .Timeline
